--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "jquery-backstretch": "^2.1.16"
     }
 }
